regression/fail/modules.12.sml
signature S =
   sig
      type 'a t
   end where type t = int
